--- a/index.html
+++ b/index.html
@@ -22,36 +22,218 @@
     <title>GOG.com</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <img src="assets/img/logo.png" alt="" class="img-fluid">
-      
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link disabled"
-              href="#"
-              tabindex="-1"
-              aria-disabled="true"
-              >Disabled</a
-            >
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <div class="row">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <img src="assets/img/logo.png" alt="" class="img pr-5" />
+              <li class="nav-item pr-2">
+                <a class="nav-link" href="#">Store ▼</a>
+              </li>
+              <li class="nav-item pr-2">
+                <a class="nav-link" href="#">About ▼</a>
+              </li>
+              <li class="nav-item pr-2">
+                <a class="nav-link" href="#">Community ▼</a>
+              </li>
+              <li class="nav-item pr-2">
+                <a class="nav-link" href="#">Support ▼</a>
+              </li>
+              <li class="nav-item pr-2">
+                <a class="nav-link" href="#">Anri ▼</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <img
+                src="assets/img/bell.png"
+                alt=""
+                class="img-fluid img-navbar mx-2"
+              />
+              <img
+                src="assets/img/social.png"
+                alt=""
+                class="img-fluid img-navbar mx-2"
+              />
+              <img
+                src="assets/img/shopc.png"
+                alt=""
+                class="img-fluid img-navbar mx-2"
+              />
+              <img
+                src="assets/img/search.png"
+                alt=""
+                class="img-fluid img-navbar mx-2"
+              />
+            </ul>
+          </div>
+        </div>
       </div>
     </nav>
 
+    <div class="container border-bottom border-secondary my-2">
+      <div class="row"><h4>Highlights</h4></div>
+    </div>
+    <div class="container my-3">
+      <div class="row">
+        <div class="col">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="assets/img/carousel1.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/carousel2.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/carousel3.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/carousel4.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/carousel5.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="assets/img/carousel6.jpg"
+                  class="d-block w-100 img-fluid rounded"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row"></div>
+    </div>
+
+    <div class="container d-flex justify-content-center mt-5">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="card" style="width: 15rem">
+            <img src="assets/img/tile (1).jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="card" style="width: 15rem">
+            <img src="assets/img/tile (1).jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="card" style="width: 15rem">
+            <img src="assets/img/tile (1).jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-6 col-lg-3">
+          <div class="card" style="width: 15rem">
+            <img src="assets/img/tile (1).jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container border-top border-bottom border-secondary mt-4">
+      <div class="row">
+        <div class="col-9 d-flex align-items-center">
+          <p>
+            We are GOG.com, the DRM-free home for a curated selection of games.
+            This place was made for gamers, so make yourself at home.
+          </p>
+        </div>
+        <div class="col d-flex align-items-center border-left border-secondary">
+          <p>The new GOG GALAXY 2.0</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container d-flex justify-content-center mt-4">
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <img src="https://placehold.it/1200x120" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
