--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
             <ul class="navbar-nav">
               <img src="assets/img/logo.png" alt="" class="img pr-5" />
               <li class="nav-item pr-2">
-                <a class="nav-link" href="#">Store ▼</a>
+                <a class="nav-link navtop" href="#">Store ▼</a>
               </li>
               <li class="nav-item pr-2">
-                <a class="nav-link" href="#">About ▼</a>
+                <a class="nav-link navtop" href="#">About ▼</a>
               </li>
               <li class="nav-item pr-2">
-                <a class="nav-link" href="#">Community ▼</a>
+                <a class="nav-link navtop" href="#">Community ▼</a>
               </li>
               <li class="nav-item pr-2">
-                <a class="nav-link" href="#">Support ▼</a>
+                <a class="nav-link navtop" href="#">Support ▼</a>
               </li>
               <li class="nav-item pr-2">
-                <a class="nav-link" href="#">Anri ▼</a>
+                <a class="nav-link navtop" href="#">Anri ▼</a>
               </li>
             </ul>
           </div>
@@ -227,10 +227,155 @@
       </div>
     </div>
 
-    <div class="container d-flex justify-content-center mt-4">
+    <div class="container d-flex justify-content-center my-4">
       <div class="row">
         <div class="col d-flex justify-content-center">
           <img src="https://placehold.it/1200x120" alt="" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+
+    <div class="container border-bottom border-secondary">
+      <div class="row">
+        <div class="col-2 d-flex align-items-end"><h6>Now on Sale</h6></div>
+        <div class="col">
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Featured deals</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Aquanox Deep Descent Weekly Sale</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Paradox Grand Strategy Collection</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">More ▼</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div
+            id="carouselExampleControls"
+            class="carousel slide"
+            data-ride="carousel"
+          >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="container">
+                  <div class="row">
+                    <div class="col">
+                      <img
+                        src="https://placehold.it/80x100"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                      <img
+                        src="https://placehold.it/80x100"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                      <img
+                        src="https://placehold.it/80x100"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                      <img
+                        src="https://placehold.it/80x100"
+                        class="d-block w-100"
+                        alt="..."
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <img
+                      src="https://placehold.it/80x100"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a
+              class="carousel-control-prev"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a
+              class="carousel-control-next"
+              href="#carouselExampleControls"
+              role="button"
+              data-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
