--- a/index.html
+++ b/index.html
@@ -955,6 +955,113 @@
       </div>
     </div>
 
+    <div class="container border-bottom border-secondary mt-5">
+      <div class="row"><h6>News</h6></div>
+    </div>
+
+    <div class="container mt-4">
+      <div
+        id="carouselExampleControls4"
+        class="carousel slide d-flex justify-content-center"
+        data-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row">
+              <div class="col-5">
+                <img
+                  src="https://placehold.it/600x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-5">
+                <img
+                  src="https://placehold.it/600x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row">
+              <div class="col-5">
+                <img
+                  src="https://placehold.it/600x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+              <div class="col-3">
+                <img
+                  src="https://placehold.it/300x300"
+                  alt=""
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleControls4"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleControls4"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
